# eecs-776

./: .gitignore
practical/: Main.hs  Models.hs  Views.hs  cabal.sandbox.config  tinyblog.cabal
project-1/: rot13.hs
project-2/: pizza.hs
project-3/: guess.hs
project-4/: EquivPower.hs
project-5/: .dining_rons.hs.swp  dining_rons.hs
